--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.2",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.10",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "1.10.0",
-    "nanoid": "^4.0.2"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "eslint": "7.19.0",
